--- a/index.html
+++ b/index.html
@@ -2037,7 +2037,7 @@ const availableGames = [
     { id: 5, name: "Juego de la Rana", func: "startGame5_Frogger", file: "frogger.html", container: "froggerGameContainer", iframe: "iframe_frogger" },
     { id: 6, name: "Tenis", func: "startGame6_pong", file: "pong.html", container: "pongGameContainer", iframe: "iframe_pong" },
     { id: 7, name: "Tres en Raya", func: "startGame7_Tictactoe", file: "tictactoe.html", container: "tictactoeGameContainer", iframe: "iframe_tictactoe" },
-    { id: 8, name: "Asterioides", func: "startGame8_Asterioides", file: "asterioides.html", container: "asterioidesGameContainer", iframe: "iframe_asterioides" },
+    { id: 8, name: "Asteroides", func: "startGame8_Asteroides", file: "asteroides.html", container: "asteroidesGameContainer", iframe: "iframe_asteroides" },
     { id: 9, name: "Tetris Lite", func: "startGame9_Tetris", file: "tetris.html", container: "tetrisGameContainer", iframe: "iframe_tetris" },
     { id: 10, name: "Pacman", func: "startGame10_Pacman", file: "pacman.html", container: "pacmanGameContainer", iframe: "iframe_pacman" }
     
