--- a/index.html
+++ b/index.html
@@ -2035,7 +2035,7 @@ const availableGames = [
     { id: 3, name: "Matamarcianos", func: "startGame3_Matamarcianos", file: "matamarcianos.html", container: "matamarcianosGameContainer", iframe: "iframe_matamarcianos" },
     { id: 4, name: "Donkeykong", func: "startGame4_Donkeykong", file: "donkeykong.html", container: "donkeykongGameContainer", iframe: "iframe_donkeykong" },
     { id: 5, name: "Juego de la Rana", func: "startGame5_Frogger", file: "frogger.html", container: "froggerGameContainer", iframe: "iframe_frogger" },
-    { id: 6, name: "Tenis", func: "startGame6_pong", file: "pong.html", container: "pongGameContainer", iframe: "iframe_pong" },
+    { id: 6, name: "Tenis", func: "startGame6_Pong", file: "pong.html", container: "pongGameContainer", iframe: "iframe_pong" },
     { id: 7, name: "Tres en Raya", func: "startGame7_Tictactoe", file: "tictactoe.html", container: "tictactoeGameContainer", iframe: "iframe_tictactoe" },
     { id: 8, name: "Asteroides", func: "startGame8_Asteroides", file: "asteroides.html", container: "asteroidesGameContainer", iframe: "iframe_asteroides" },
     { id: 9, name: "Tetris Lite", func: "startGame9_Tetris", file: "tetris.html", container: "tetrisGameContainer", iframe: "iframe_tetris" },
