--- a/juegos/tictactoe.html
+++ b/juegos/tictactoe.html
@@ -3,280 +3,211 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Conecta 4 Educativo</title>
+<title>Juego de Memoria Educativo 5x6</title>
 <style>
   body {
     margin: 0; padding: 10px;
     font-family: Arial, sans-serif;
-    background: #111;
+    background: #222;
     color: #eee;
     display: flex;
     flex-direction: column;
     align-items: center;
     user-select: none;
   }
-  #controls {
-    margin-bottom: 15px;
+  h1 {
+    margin-bottom: 10px;
   }
-  button {
-    background: #0a74da;
-    color: #fff;
-    border: none;
-    border-radius: 6px;
-    padding: 10px 20px;
-    margin: 0 8px;
+  #gameContainer {
+    width: 100vw;
+    max-width: 400px;
+  }
+  #grid {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-gap: 8px;
+  }
+  .card {
+    background-color: #444;
+    border-radius: 8px;
+    aspect-ratio: 1 / 1;
     cursor: pointer;
-    font-size: 1rem;
-    user-select: none;
+    position: relative;
+    box-shadow: 0 2px 6px rgba(0,0,0,0.7);
+    transition: transform 0.3s ease;
+    perspective: 600px;
   }
-  button:disabled {
-    background: #555;
-    cursor: default;
+  .card.flipped .front,
+  .card.matched .front {
+    transform: rotateY(0deg);
+  }
+  .card.flipped .back,
+  .card.matched .back {
+    transform: rotateY(180deg);
+  }
+  .card .front, .card .back {
+    position: absolute;
+    top: 0; left: 0; right: 0; bottom: 0;
+    border-radius: 8px;
+    backface-visibility: hidden;
+    transition: transform 0.5s ease;
+  }
+  .card .front {
+    background-color: #fff;
+    transform: rotateY(180deg);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 2rem;
+    color: #333;
+  }
+  .card .back {
+    background-color: #0a74da;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 2.5rem;
+    color: #fff;
+    user-select:none;
   }
   #message {
-    margin: 15px 0;
-    font-size: 1.2rem;
-    min-height: 1.6em;
+    margin: 12px 0 0;
+    font-size: 1.3rem;
+    min-height: 1.5em;
     text-align: center;
-  }
-  canvas {
-    background-color: #0052cc;
-    border-radius: 12px;
-    box-shadow: 0 0 10px #003d99;
-    touch-action: manipulation;
-    max-width: 100vw;
-    height: auto;
+    color: #0ff;
+    font-weight: bold;
   }
 </style>
 </head>
 <body>
 
-<h1>Conecta 4 Educativo</h1>
-
-<div id="controls" role="group" aria-label="Modo de juego">
-  <button id="btnPvP" aria-pressed="true">2 Jugadores</button>
-  <button id="btnPvC" aria-pressed="false">Jugador vs Máquina</button>
+<h1>Juego de Memoria 5x6</h1>
+<div id="gameContainer" role="application" aria-label="Juego de memoria con 5 columnas y 6 filas">
+  <div id="grid" aria-live="polite" aria-relevant="additions removals" aria-atomic="true"></div>
+  <div id="message" aria-live="assertive" aria-atomic="true"></div>
 </div>
-
-<canvas id="gameCanvas" width="420" height="360" aria-label="Tablero de Conecta 4" role="img" tabindex="0"></canvas>
-
-<div id="message" aria-live="polite"></div>
 
 <script>
 (() => {
-  const canvas = document.getElementById('gameCanvas');
-  const ctx = canvas.getContext('2d');
+  const rows = 6;
+  const cols = 5;
+  const totalCards = rows * cols; // 30 cards total
+  const grid = document.getElementById('grid');
   const messageElem = document.getElementById('message');
-  const btnPvP = document.getElementById('btnPvP');
-  const btnPvC = document.getElementById('btnPvC');
 
-  // Board config
-  const COLS = 7;
-  const ROWS = 6;
+  // We need pairs, so 15 unique cards duplicated
+  const uniqueSymbols = [
+    '🍎','🌟','🐶','🍀','🎈','🚗','🍌','🐱','⚽','🎵',
+    '💎','🎀','🍇','🚀','🌈'
+  ];
 
-  // Canvas dimensions and constants
-  const CANVAS_WIDTH = canvas.width;
-  const CANVAS_HEIGHT = canvas.height;
-  const SLOT_SIZE = CANVAS_WIDTH / COLS;
-  const RADIUS = SLOT_SIZE * 0.4;
+  // Shuffle helper
+  function shuffle(array) {
+    let currentIndex = array.length, randomIndex;
+    while(currentIndex !== 0) {
+      randomIndex = Math.floor(Math.random()*currentIndex);
+      currentIndex--;
+      [array[currentIndex], array[randomIndex]] = [array[randomIndex], array[currentIndex]];
+    }
+    return array;
+  }
 
-  // Game state
-  let board = [];
-  let currentPlayer = 1; // 1=Red, 2=Yellow
-  let vsComputer = false;
-  let gameActive = true;
+  // Create deck: duplicate and shuffle
+  let deck = shuffle([...uniqueSymbols, ...uniqueSymbols]);
 
-  // Initialize board: 0 = empty, 1 = player 1 disk, 2 = player 2 disk
-  function initBoard() {
-    board = [];
-    for(let r=0; r<ROWS; r++) {
-      const row = [];
-      for(let c=0; c<COLS; c++) {
-        row.push(0);
+  // State variables
+  let flippedCards = [];
+  let matchedCount = 0;
+  let lockBoard = false;
+
+  function createCard(symbol, index) {
+    const card = document.createElement('div');
+    card.classList.add('card');
+    card.setAttribute('role', 'button');
+    card.setAttribute('tabindex', '0');
+    card.setAttribute('aria-pressed', 'false');
+    card.setAttribute('aria-label', 'Carta boca abajo');
+    card.dataset.symbol = symbol;
+    card.dataset.index = index;
+
+    const front = document.createElement('div');
+    front.classList.add('front');
+    front.textContent = symbol;
+
+    const back = document.createElement('div');
+    back.classList.add('back');
+    back.innerHTML = '&#x1F0A0;'; // Playing card back symbol or similar
+
+    card.appendChild(front);
+    card.appendChild(back);
+
+    // Click handler
+    card.addEventListener('click', () => {
+      if(lockBoard || card.classList.contains('flipped') || card.classList.contains('matched')) return;
+      flipCard(card);
+    });
+
+    // Keyboard access: space or enter to flip
+    card.addEventListener('keydown', e => {
+      if(e.key === 'Enter' || e.key === ' '){
+        e.preventDefault();
+        card.click();
       }
-      board.push(row);
+    });
+
+    return card;
+  }
+
+  function flipCard(card) {
+    if(flippedCards.length === 2) return;
+    card.classList.add('flipped');
+    card.setAttribute('aria-pressed', 'true');
+    flippedCards.push(card);
+
+    if(flippedCards.length === 2) {
+      checkForMatch();
     }
   }
 
-  // Draw empty board and disks
-  function drawBoard() {
-    ctx.clearRect(0, 0, CANVAS_WIDTH, CANVAS_HEIGHT);
-    // Draw slots background
-    ctx.fillStyle = '#0052cc';
-    ctx.fillRect(0, 0, CANVAS_WIDTH, CANVAS_HEIGHT);
-
-    // Draw slots and disks
-    for(let r=0; r<ROWS; r++){
-      for(let c=0; c<COLS; c++){
-        const x = c * SLOT_SIZE + SLOT_SIZE/2;
-        const y = (ROWS - 1 - r) * SLOT_SIZE + SLOT_SIZE/2;
-
-        // Draw slot background: circle in blue
-        ctx.beginPath();
-        ctx.arc(x, y, RADIUS, 0, 2*Math.PI);
-        ctx.fillStyle = '#003d99';
-        ctx.fill();
-
-        // Draw disk if any
-        if(board[r][c] === 1) {
-          ctx.fillStyle = '#ff0000'; // Red
-        } else if(board[r][c] === 2) {
-          ctx.fillStyle = '#ffff00'; // Yellow
-        } else {
-          ctx.fillStyle = '#1a1a66'; // Empty slot darker circle inside
-          ctx.beginPath();
-          ctx.arc(x, y, RADIUS * 0.8, 0, 2*Math.PI);
-          ctx.fill();
-          continue;
+  function checkForMatch() {
+    lockBoard = true;
+    const [cardOne, cardTwo] = flippedCards;
+    if(cardOne.dataset.symbol === cardTwo.dataset.symbol){
+      cardOne.classList.add('matched');
+      cardTwo.classList.add('matched');
+      matchedCount += 2;
+      setTimeout(() => {
+        messageElem.textContent = `¡Buen trabajo! Llevas ${matchedCount/2} parejas encontradas.`;
+        resetFlip();
+        if(matchedCount === totalCards){
+          setTimeout(() => finishGame(true), 1500);
         }
-
-        ctx.beginPath();
-        ctx.arc(x, y, RADIUS * 0.85, 0, 2*Math.PI);
-        ctx.fill();
-      }
-    }
-  }
-
-  // Get first empty row in a column, or -1 if full
-  function getAvailableRow(col) {
-    for(let r = 0; r < ROWS; r++){
-      if(board[r][col] === 0){
-        return r;
-      }
-    }
-    return -1;
-  }
-
-  // Drop piece for player in column, return true if successful
-  function dropPiece(col, player) {
-    if(!gameActive) return false;
-    const row = getAvailableRow(col);
-    if(row === -1) return false;
-    board[row][col] = player;
-    return true;
-  }
-
-  // Check horizontal, vertical and diagonal for 4 in a row
-  function checkWin(player) {
-    // Horizontal
-    for(let r=0; r<ROWS; r++){
-      for(let c=0; c<=COLS-4; c++){
-        if(board[r][c] === player &&
-           board[r][c+1] === player &&
-           board[r][c+2] === player &&
-           board[r][c+3] === player) return true;
-      }
-    }
-    // Vertical
-    for(let c=0; c<COLS; c++){
-      for(let r=0; r<=ROWS-4; r++){
-        if(board[r][c] === player &&
-           board[r+1][c] === player &&
-           board[r+2][c] === player &&
-           board[r+3][c] === player) return true;
-      }
-    }
-    // Diagonal down-right
-    for(let r=0; r<=ROWS-4; r++){
-      for(let c=0; c<=COLS-4; c++){
-        if(board[r][c] === player &&
-           board[r+1][c+1] === player &&
-           board[r+2][c+2] === player &&
-           board[r+3][c+3] === player) return true;
-      }
-    }
-    // Diagonal up-right
-    for(let r=3; r<ROWS; r++){
-      for(let c=0; c<=COLS-4; c++){
-        if(board[r][c] === player &&
-           board[r-1][c+1] === player &&
-           board[r-2][c+2] === player &&
-           board[r-3][c+3] === player) return true;
-      }
-    }
-    return false;
-  }
-
-  // Check for draw (no empty slots)
-  function checkDraw() {
-    for(let c=0; c<COLS; c++){
-      if(getAvailableRow(c) !== -1) return false;
-    }
-    return true;
-  }
-
-  // Show message in panel
-  function showMessage(msg) {
-    messageElem.textContent = msg;
-  }
-
-  // Update turn message
-  function updateTurnMessage() {
-    if(!gameActive) return;
-    if(vsComputer) {
-      showMessage(currentPlayer === 1 ? "Tu turno" : "Turno de la máquina");
+      }, 700);
     } else {
-      showMessage(`Turno jugador ${currentPlayer === 1 ? 'Rojo' : 'Amarillo'}`);
+      setTimeout(() => {
+        cardOne.classList.remove('flipped');
+        cardTwo.classList.remove('flipped');
+        cardOne.setAttribute('aria-pressed', 'false');
+        cardTwo.setAttribute('aria-pressed', 'false');
+        messageElem.textContent = 'Inténtalo de nuevo.';
+        resetFlip();
+      }, 1200);
     }
   }
 
-  // Switch player turn
-  function switchTurn() {
-    currentPlayer = 3 - currentPlayer;
-    updateTurnMessage();
+  function resetFlip() {
+    flippedCards = [];
+    lockBoard = false;
   }
 
-  // Reset game state
-  function resetGame() {
-    initBoard();
-    currentPlayer = 1;
-    gameActive = true;
-    showMessage('');
-    updateTurnMessage();
-    drawBoard();
-  }
-
-  // Simple AI to choose a column randomly from available (improved later as needed)
-  function simpleAIPlay() {
-    const validCols = [];
-    for(let i=0; i<COLS; i++){
-      if(getAvailableRow(i) !== -1) validCols.push(i);
-    }
-    if(validCols.length === 0) return -1;
-    return validCols[Math.floor(Math.random() * validCols.length)];
-  }
-
-  // AI turn async to simulate delay
-  async function aiTurn() {
-    if(!gameActive || currentPlayer !== 2) return;
-    showMessage('Turno de la máquina...');
-    await new Promise(resolve => setTimeout(resolve, 600)); // delay
-    const col = simpleAIPlay();
-    if(col === -1) return;
-    dropPiece(col, 2);
-    drawBoard();
-    if(checkWin(2)) {
-      gameActive = false;
-      showMessage('La máquina gana. ¡Fin del juego!');
-      notifyParent(false);
-      return;
-    }
-    if(checkDraw()) {
-      gameActive = false;
-      showMessage('Empate. ¡Fin del juego!');
-      notifyParent(null);
-      return;
-    }
-    switchTurn();
-  }
-
-  // Notify parent frame about game end, with fallback
-  function notifyParent(playerWon) {
-    // Parámetro true si ganó jugador, false si máquina, null empate
+  function finishGame(won) {
+    messageElem.textContent = won ? '🎉 ¡Felicidades, completaste el juego!' : '😞 Juego terminado.';
+    // Notifica al padre después de 2.5 seg
     setTimeout(() => {
       try {
-        if(window.parent && window.parent !== window && typeof window.parent.endGame === 'function'){
-          window.parent.endGame(playerWon === true);
+        if(window.parent && typeof window.parent.endGame === 'function'){
+          window.parent.endGame(won);
         } else {
           window.location.href = '/';
         }
@@ -286,63 +217,21 @@
     }, 2500);
   }
 
-  // Handle user clicking on board to place disk
-  function handleClick(event) {
-    if(!gameActive || currentPlayer !== 1) return;
-    const rect = canvas.getBoundingClientRect();
-    const x = event.clientX - rect.left;
-    const colClicked = Math.floor(x / SLOT_SIZE);
-    if(colClicked < 0 || colClicked >= COLS) return;
-    if(dropPiece(colClicked, 1)){
-      drawBoard();
-      if(checkWin(1)){
-        gameActive = false;
-        showMessage('¡Has ganado! 🎉');
-        notifyParent(true);
-        return;
-      }
-      if(checkDraw()){
-        gameActive = false;
-        showMessage('Empate. Fin del juego.');
-        notifyParent(null);
-        return;
-      }
-      switchTurn();
-      aiTurn();
+  function initGame() {
+    deck = shuffle([...uniqueSymbols, ...uniqueSymbols]);
+    matchedCount = 0;
+    lockBoard = false;
+    flippedCards = [];
+    messageElem.textContent = 'Selecciona dos cartas para encontrar parejas.';
+    grid.innerHTML = '';
+    for(let i=0; i<totalCards; i++) {
+      const card = createCard(deck[i], i);
+      grid.appendChild(card);
     }
   }
 
-  // Touch support: treat touch as click for simplicity
-  canvas.addEventListener('touchstart', e => {
-    if(e.touches.length === 1){
-      handleClick(e.touches[0]);
-    }
-  });
-
-  // Mouse support
-  canvas.addEventListener('click', handleClick);
-
-  // Buttons for mode selection
-  btnPvP.addEventListener('click', () => {
-    if(gameActive) return;
-    vsComputer = false;
-    btnPvP.setAttribute('aria-pressed', 'true');
-    btnPvC.setAttribute('aria-pressed', 'false');
-    showMessage('Modo 2 Jugadores activado');
-    resetGame();
-  });
-  btnPvC.addEventListener('click', () => {
-    if(gameActive) return;
-    vsComputer = true;
-    btnPvP.setAttribute('aria-pressed', 'false');
-    btnPvC.setAttribute('aria-pressed', 'true');
-    showMessage('Modo Jugador vs Máquina activado');
-    resetGame();
-  });
-
-  // On load initialize PvP by default
-  vsComputer = false;
-  resetGame();
+  // Iniciar el juego
+  initGame();
 
 })();
 </script>
