Update question text and options in index.html

--- a/index.html
+++ b/index.html
@@ -2108,7 +2108,7 @@
   { q: "La alta esperanza de vida es una característica de los países:", options: ["Subdesarrollados", "Ricos y desarrollados", "Pobres", "Con alta natalidad"], correct: 1 },
   { q: "¿Cuál es un factor que afecta negativamente al Crecimiento Natural?", options: ["Alta natalidad", "Baja mortalidad infantil", "Baja natalidad", "Alta inmigración"], correct: 2 },
   { q: "El fenómeno de la emigración consiste en:", options: ["Llegar a un país para vivir", "Abandonar el país de origen para vivir en otro", "Buscar empleo", "Nacer en un lugar"], correct: 1 },
-  { q: "Si en un territorio viven 100 personas en $1 \text{ km}^2$, su densidad es:", options: ["$100 \text{ hab}/\text{km}^2$", "$1 \text{ hab}/\text{km}^2$", "$10 \text{ hab}/\text{km}^2$", "$50 \text{ hab}/\text{km}^2$"], correct: 0 },
+ { "q": "Si en 1 kilómetro cuadrado viven 100 personas, ¿cuál es su densidad de población?", "options": ["100 habitantes por kilómetro cuadrado", "1 habitante por kilómetro cuadrado", "10 habitantes por kilómetro cuadrado", "50 habitantes por kilómetro cuadrado"], "correct": 0 },
   { q: "El crecimiento de la población se debe a la suma del Crecimiento Natural y el:", options: ["Desarrollo económico", "Saldo Migratorio", "Población Activa", "Tasa de Paro"], correct: 1 },
   { q: "El envejecimiento de la población se produce por la combinación de:", options: ["Alta natalidad y baja esperanza de vida", "Baja natalidad y alta esperanza de vida", "Alta mortalidad y alta natalidad", "Baja inmigración"], correct: 1 },
   { q: "Una 'Leyenda' sobre el hombre en la casa común se refiere a su:", options: ["Relación con la tecnología", "Relación con la naturaleza", "Vida social", "Economía"], correct: 1 },
