--- a/index.html
+++ b/index.html
@@ -351,6 +351,23 @@
 <div style="margin-top: 20px;">
     <button onclick="endGame()" style="padding: 10px; background-color: #dc3545; color: white; border: none; border-radius: 5px; cursor: pointer;">Volver a los Ejercicios</button>
 </div>
+        </div> 
+<div id="reviewScreen" class="screen">
+    <h2>Resumen de la Sesión</h2>
+    <div style="margin-bottom: 20px; padding: 15px; border: 1px solid #ccc; border-radius: 8px; background-color: #f9f9f9;">
+        <p>Puntos totales acertados: <strong id="finalPoints" style="color: #28a745;">0</strong></p>
+        <p>Nivel alcanzado: <strong id="finalLevel" style="color: #007bff;">1</strong></p>
+    </div>
+
+    <h3>Preguntas que Respondiste Correctamente:</h3>
+    <div id="reviewQuestions" style="text-align: left; max-height: 400px; overflow-y: auto; padding: 10px; border: 1px solid #eee;">
+        <p>Cargando resumen...</p>
+    </div>
+    
+    <button onclick="goToSubjectFromExercise()" style="padding: 15px; margin-top: 20px; background-color: #6c757d; color: white; border: none; border-radius: 5px; width: 80%; cursor: pointer;">
+        Volver a Seleccionar Tema
+    </button>
+</div>
     <script>
         // ===================================================================
         // 1. ESTRUCTURA CURRICULAR (TU CÓDIGO)
