--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
                            // BLOQUE 1: NUMERACIÓN (Redondeo, Aproximación, Descomposición base 10)
   { "q": "Redondea el número 4.789 a la centena más cercana.", "options": ["4.700", "4.800", "5.000", "4.790"], "correct": 1 },
   { "q": "Aproxima el número 12.345 al millar más cercano.", "options": ["12.000", "13.000", "10.000", "12.300"], "correct": 0 },
-  { "q": "¿Cómo se descompone 25.000 en potencias de base 10?", "options": ["2 * 10^4 + 5 * 10^3", "2 * 10^5 + 5 * 10^4", "25 * 10^3", "2 * 10^4 + 50 * 10^2"], "correct": 0 },
+ { "q": "¿Cómo se descompone 25.000 en potencias de base 10?", "options": ["2 × 10⁴ + 5 × 10³", "2 × 10⁵ + 5 × 10⁴", "25 × 10³", "2 × 10⁴ + 50 × 10²"], "correct": 0 },
   { "q": "Redondea 32.501 a la decena de millar más cercana.", "options": ["30.000", "40.000", "33.000", "32.000"], "correct": 0 },
   { "q": "Redondea 56.712 a la unidad de millar más cercana.", "options": ["56.000", "57.000", "56.700", "60.000"], "correct": 1 },
   { "q": "¿Cómo se lee el número 2.050.000?", "options": ["Dos millones quinientos mil", "Veinte millones quinientos mil", "Dos millones cincuenta mil", "Doscientos cincuenta mil"], "correct": 2 },
@@ -388,31 +388,31 @@
   { "q": "¿Qué número tiene el 8 en la posición de las centenas de millar?", "options": ["1.850.000", "8.123.000", "1.280.000", "85.000"], "correct": 0 },
   { "q": "Aproxima el número 87.123 a la decena de millar más cercana.", "options": ["80.000", "87.000", "90.000", "85.000"], "correct": 2 },
   { "q": "Redondea 6.500 a la unidad de millar.", "options": ["6.000", "7.000", "6.500", "6.600"], "correct": 1 },
-  { "q": "¿Qué número representa la descomposición 5 * 10^3 + 9 * 10^1?", "options": ["5.910", "5.090", "5.900", "5.009"], "correct": 1 },
+  { "q": "¿Qué número representa la descomposición 5 × 10³ + 9 × 10¹?", "options": ["5.910", "5.090", "5.900", "5.009"], "correct": 1 },
   { "q": "El número 10.045 redondeado a la centena es:", "options": ["10.000", "10.100", "10.050", "10.040"], "correct": 0 },
   { "q": "Redondea 345.678 a la decena de millar más cercana.", "options": ["340.000", "350.000", "345.000", "346.000"], "correct": 1 },
   { "q": "Aproxima el número 7.801 al millar más cercano.", "options": ["7.000", "8.000", "7.800", "7.900"], "correct": 1 },
-  { "q": "¿Cómo se descompone 1.050 en potencias de base 10?", "options": ["1 * 10^3 + 5 * 10^1", "1 * 10^3 + 5 * 10^2", "10 * 10^2 + 5 * 10^1", "1 * 10^4 + 5 * 10^1"], "correct": 0 },
+  { "q": "¿Cómo se descompone 1.050 en potencias de base 10?", "options": ["1 × 10³ + 5 × 10¹", "1 × 10³ + 5 × 10²", "10 × 10² + 5 × 10¹", "1 × 10⁴ + 5 × 10¹"], "correct": 0 },
   { "q": "Redondea 90.909 a la centena más cercana.", "options": ["90.000", "90.900", "91.000", "90.910"], "correct": 1 },
   { "q": "El número 423.500 redondeado al millón es:", "options": ["400.000", "1.000.000", "500.000", "0"], "correct": 3 },
   { "q": "Aproxima 8.543 a la centena más cercana.", "options": ["8.000", "8.500", "8.600", "9.000"], "correct": 1 },
-  { "q": "¿Qué número representa 7 * 10^5 + 2 * 10^2?", "options": ["720.000", "700.200", "702.000", "72.000"], "correct": 1 },
+  { "q": "¿Qué número representa 7 × 10⁵ + 2 × 10²?", "options": ["720.000", "700.200", "702.000", "72.000"], "correct": 1 },
   { "q": "Redondea el número 15.150 a la unidad de millar.", "options": ["15.000", "16.000", "15.200", "15.100"], "correct": 0 },
-  { "q": "El número que se descompone como 3 * 10^4 + 8 * 10^1 es:", "options": ["3.080", "30.080", "3.008", "38.000"], "correct": 1 },
+  { "q": "El número que se descompone como 3 × 10⁴ + 8 × 10¹ es:", "options": ["3.080", "30.080", "3.008", "38.000"], "correct": 1 },
   { "q": "Aproxima 987 a la decena más cercana.", "options": ["980", "990", "1.000", "900"], "correct": 1 },
-  { "q": "¿Cuál es el resultado de la descomposición 2 * 10^2 + 1 * 10^0?", "options": ["210", "201", "21", "200"], "correct": 1 },
+ { "q": "¿Cuál es el resultado de la descomposición 2 × 10² + 1 × 10⁰?", "options": ["210", "201", "21", "200"], "correct": 1 },
   { "q": "Redondea 54.321 a la unidad de millar.", "options": ["54.000", "55.000", "50.000", "54.300"], "correct": 0 },
   { "q": "El número 600.700 redondeado a la centena de millar es:", "options": ["600.000", "700.000", "60.000", "610.000"], "correct": 0 },
   { "q": "Aproxima 1.250 a la decena más cercana.", "options": ["1.200", "1.300", "1.250", "1.260"], "correct": 2 },
-  { "q": "Descompón el número 40.000 en potencias de base 10.", "options": ["4 * 10^3", "4 * 10^4", "40 * 10^3", "4 * 10^5"], "correct": 1 },
+ { "q": "Descompón el número 40.000 en potencias de base 10.", "options": ["4 × 10³", "4 × 10⁴", "40 × 10³", "4 × 10⁵"], "correct": 1 },
   { "q": "Redondea 23.999 a la centena más cercana.", "options": ["23.900", "24.000", "23.000", "24.999"], "correct": 1 },
-  { "q": "El valor posicional de la descomposición 9 * 10^2 + 5 * 10^1 es:", "options": ["95", "905", "950", "590"], "correct": 2 },
+  { "q": "El valor posicional de la descomposición 9 × 10² + 5 × 10¹ es:", "options": ["95", "905", "950", "590"], "correct": 2 },
   { "q": "Aproxima 6.789 al millar.", "options": ["6.000", "7.000", "6.700", "6.800"], "correct": 1 },
   { "q": "¿Cuál es el redondeo de 199 a la decena más cercana?", "options": ["190", "200", "100", "195"], "correct": 1 },
-  { "q": "El número 345.000 se descompone como:", "options": ["3 * 10^5 + 4 * 10^4 + 5 * 10^3", "345 * 10^3", "3 * 10^4 + 4 * 10^3 + 5 * 10^2", "Ambas son correctas"], "correct": 0 },
+  { "q": "El número 345.000 se descompone como:", "options": ["3 × 10⁵ + 4 × 10⁴ + 5 × 10³", "345 × 10³", "3 × 10⁴ + 4 × 10³ + 5 × 10²", "Ambas son correctas"], "correct": 0 }
   { "q": "Redondea el número 4.500 a la unidad de millar.", "options": ["4.000", "5.000", "4.600", "4.500"], "correct": 1 },
   { "q": "Aproxima 1.950 a la centena.", "options": ["1.000", "2.000", "1.900", "1.950"], "correct": 1 },
-  { "q": "¿Qué número representa la descomposición 8 * 10^1 + 6 * 10^0?", "options": ["860", "86", "68", "806"], "correct": 1 },
+ { "q": "¿Qué número representa la descomposición 8 × 10¹ + 6 × 10⁰?", "options": ["860", "86", "68", "806"], "correct": 1 },
   { "q": "Redondea 50.099 a la unidad de millar.", "options": ["50.000", "51.000", "50.100", "50.900"], "correct": 0 },
   { "q": "El número 7.890.000 redondeado a la unidad de millón es:", "options": ["7.000.000", "8.000.000", "7.900.000", "7.800.000"], "correct": 1 },
   
@@ -425,15 +425,15 @@
   { q: "Realiza la multiplicación: 23 * 15.", options: ["355", "345", "360", "335"], correct: 1 },
   { q: "Realiza la división: 480 entre 6.", options: ["70", "80", "60", "90"], correct: 1 },
   { q: "¿Cuál es el resultado de la operación combinada 8 + 2 * 5?", options: ["50", "18", "40", "16"], correct: 1 },
-  { q: "¿Cuál es el resultado de la potencia 5 elevado a 3 (5^3)?", options: ["15", "125", "25", "53"], correct: 1 },
-  { q: "¿Cuál es el resultado de 10^3 + 10^2?", options: ["1.000", "1.100", "1.010", "1.200"], correct: 1 },
+  { "q": "¿Cuál es el resultado de la potencia 5 elevado a 3 (5³)?", "options": ["15", "125", "25", "53"], "correct": 1 },
+  { "q": "¿Cuál es el resultado de 10³ + 10²?", "options": ["1.000", "1.100", "1.010", "1.200"], "correct": 1 },
   { q: "Calcula 500 - 150 * 2.", options: ["700", "350", "300", "200"], correct: 4 },
   { q: "Calcula el producto: 34 * 21.", options: ["714", "684", "614", "704"], correct: 0 },
   { q: "Calcula la división: 639 entre 3.", options: ["213", "203", "230", "210"], correct: 0 },
-  { q: "El valor de 4^2 + 5 * 2 es:", options: ["26", "32", "18", "42"], correct: 0 },
+ { "q": "El valor de 4² + 5 × 2 es:", "options": ["26", "32", "18", "42"], "correct": 0 },
   { q: "Calcula 25 * 40.", options: ["1.000", "100", "1.200", "800"], correct: 0 },
   { q: "¿Cuál es el resultado de 300 / 12?", options: ["20", "30", "25", "15"], correct: 2 },
-  { q: "Calcula 7^2 - 4 * 10.", options: ["39", "9", "29", "19"], correct: 1 },
+ { "q": "Calcula 7² - 4 × 10.", "options": ["39", "9", "29", "19"], "correct": 1 },
   { q: "¿Cuál es el resultado de la operación combinada 100 / (4 + 6)?", options: ["10", "90", "11", "100"], correct: 0 },
   { q: "Calcula la suma: 5.600 + 1.400.", options: ["6.000", "7.000", "7.200", "6.800"], correct: 1 },
   
@@ -460,28 +460,28 @@
   { q: "En la recta numérica, ¿dónde se sitúa el número 2?", options: ["A la izquierda del 0", "En el 0", "A la derecha del 0", "No se puede representar"], correct: 2 },
   { q: "Aplica la propiedad asociativa a (5 + 3) + 7.", options: ["5 + (3 + 7)", "5 * 3 + 7", "5 + 3 * 7", "7 + 5 + 3"], correct: 0 },
   { q: "¿Qué propiedad se aplica en: 3 * (10 + 2) = 3 * 10 + 3 * 2?", options: ["Asociativa", "Conmutativa", "Distributiva", "Elemento neutro"], correct: 2 },
-  { q: "Si la base de una potencia es 2 y el exponente es 6, ¿cuál es el resultado (2^6)?", options: ["12", "64", "32", "16"], correct: 1 },
+  { "q": "Si la base de una potencia es 2 y el exponente es 6, ¿cuál es el resultado (2⁶)?", "options": ["12", "64", "32", "16"], "correct": 1 },
   { q: "El resultado de 1.000 + 10^2 es:", options: ["1.020", "1.100", "1.002", "2.000"], correct: 1 },
-  { q: "¿Cómo se llama el '5' en la expresión 10^5?", options: ["Base", "Valor", "Potencia", "Exponente"], correct: 3 },
+ { "q": "¿Cómo se llama el '5' en la expresión 10⁵?", "options": ["Base", "Valor", "Potencia", "Exponente"], "correct": 3 }
   { q: "¿Cuál de estas fracciones se representa con un punto a la derecha del 1 en la recta numérica?", options: ["2/5", "1/2", "3/3", "7/4"], correct: 3 },
   { q: "Calcula la operación combinada: 15 - (3 + 4).", options: ["12", "8", "9", "11"], correct: 0 },
   { q: "El valor de 10 elevado a 5 (10^5) es:", options: ["10.000", "100.000", "50", "1.000.000"], correct: 1 },
-  { q: "¿Cuál es el exponente en la potencia 7^2?", options: ["7", "9", "2", "49"], correct: 2 },
+{ "q": "¿Cuál es el exponente en la potencia 7²?", "options": ["7", "9", "2", "49"], "correct": 2 },
   { q: "¿Qué fracción es equivalente a 1 entero y 1/4 (fracción impropia)?", options: ["5/4", "1/4", "4/1", "2/4"], correct: 0 },
   { q: "¿Qué propiedad dice que el orden de los factores no altera el producto?", options: ["Asociativa", "Distributiva", "Conmutativa", "Elemento Neutro"], correct: 2 },
   { q: "¿Cuál es la fracción propia con denominador 5?", options: ["5/5", "7/5", "2/5", "5/1"], correct: 2 },
   { q: "El número -2 en la recta numérica se encuentra:", options: ["A la derecha del 0", "En el 0", "A la izquierda del 0", "No se puede representar"], correct: 2 },
-  { q: "La descomposición 6 * 10^3 + 5 * 10^2 corresponde al número:", options: ["6.050", "6.500", "650", "65.000"], correct: 1 },
+ { "q": "La descomposición 6 × 10³ + 5 × 10² corresponde al número:", "options": ["6.050", "6.500", "650", "65.000"], "correct": 1 },
   { q: "Si representas 3/2 en la recta numérica, ¿dónde se sitúa?", options: ["A la izquierda del 1", "Entre el 0 y el 1", "A la derecha del 1", "En el 2"], correct: 2 },
   { q: "El valor de la expresión 20 / (4 - 2) es:", options: ["10", "4", "5", "18"], correct: 0 },
   { q: "El número 4.567 redondeado a la unidad de millar es:", options: ["4.500", "5.000", "4.000", "4.600"], correct: 1 },
   { q: "¿Qué fracción representa 1/2 de 1/2?", options: ["1/4", "2/4", "1/1", "1/2"], correct: 0 },
   { q: "Aproxima el número 4.901 a la centena más cercana.", options: ["4.900", "4.000", "5.000", "4.910"], correct: 0 },
-  { q: "El resultado de 1^5 es:", options: ["5", "1", "15", "0"], correct: 1 },
-  { q: "El número que se representa con 10^6 es:", options: ["10.000", "100.000", "1.000.000", "60"], correct: 2 },
+  { "q": "El resultado de 1⁵ es:", "options": ["5", "1", "15", "0"], "correct": 1 },
+ { "q": "El número que se representa con 10⁶ es:", "options": ["10.000", "100.000", "1.000.000", "60"], "correct": 2 },
   { q: "¿Qué fracción representa el punto medio entre el 0 y el 1 en la recta numérica?", options: ["1/4", "1/2", "3/4", "1/1"], correct: 1 },
   { q: "¿Qué propiedad nos permite cambiar el orden de los sumandos sin alterar el resultado?", options: ["Asociativa", "Conmutativa", "Distributiva", "Elemento neutro"], correct: 1 },
-  { q: "¿Cómo se llama el '4' en la potencia 4^5?", options: ["Exponente", "Base", "Potencia", "Índice"], correct: 1 },
+ { "q": "¿Cómo se llama el '4' en la potencia 4⁵?", "options": ["Exponente", "Base", "Potencia", "Índice"], "correct": 1 },
   { q: "La fracción 9/4 es:", options: ["Propia", "Unidad", "Impropia", "Decimal"], correct: 2 },
   { q: "El valor de la expresión 2 * (5 + 3) es igual a 2 * 5 + 2 * 3 por la propiedad:", options: ["Asociativa", "Conmutativa", "Distributiva", "Elemento neutro"], correct: 2 },
   { q: "Un número entero negativo se sitúa en la recta numérica:", options: ["En el 0", "A la derecha del 0", "A la izquierda del 0", "Solo en números pares"], correct: 2 },
@@ -705,7 +705,7 @@
 
 
   // BLOQUE 2: CÁLCULO (Potencias, Op. combinadas, Decimales, Fracciones, Probabilidades, Áreas/Perímetros)
-  { q: "El valor de 10 elevado a 4 (10^4) es:", options: ["1.000", "40", "100.000", "10.000"], correct: 3 },
+{ "q": "El valor de 10 elevado a 4 (10⁴) es:", "options": ["1.000", "40", "100.000", "10.000"], "correct": 3 },
   { q: "¿Cuál es el resultado de la operación combinada 10 - 2 * (1 + 3)?", options: ["32", "2", "18", "16"], correct: 1 },
   { q: "Calcula la multiplicación de decimales: 2,5 * 0,3.", options: ["7,5", "0,75", "2,8", "75"], correct: 1 },
   { q: "Calcula la división de decimales: 15,0 entre 0,5.", options: ["3", "7,5", "30", "15"], correct: 2 },
@@ -715,14 +715,14 @@
   { q: "Divide las fracciones: 5/6 entre 1/3.", options: ["15/6", "5/18", "2/5", "5/2"], correct: 0 },
   { q: "En un dado, la probabilidad de sacar un número par es:", options: ["1/6", "1/2", "1/3", "1/4"], correct: 1 },
   { q: "El perímetro de un rectángulo es 30 m y su largo es 10 m. ¿Cuál es su ancho?", options: ["5 m", "10 m", "15 m", "20 m"], correct: 0 },
-  { q: "El valor de 2^3 * 10 - 5 es:", options: ["75", "30", "11", "55"], correct: 3 },
+  { "q": "El valor de 2³ × 10 - 5 es:", "options": ["75", "30", "11", "55"], "correct": 3 },
   { q: "Calcula 5,5 + 2,5 * 2.", options: ["16", "11,5", "13,5", "10,5"], correct: 0 },
   { q: "Calcula 0,45 + 1,5 - 0,95.", options: ["1,0", "0,9", "2,9", "1,5"], correct: 0 },
   { q: "Calcula 2/5 * 3/4.", options: ["6/20", "5/9", "8/15", "6/9"], correct: 0 },
   { q: "Calcula 1/2 entre 1/4.", options: ["1/8", "2/4", "2", "4"], correct: 2 },
   { q: "Calcula el área de un cuadrado de 7 cm de lado.", options: ["14 cm2", "28 cm2", "49 cm2", "70 cm2"], correct: 2 },
   { q: "La probabilidad de sacar un número menor que 3 en un dado es:", options: ["1/6", "2/6", "3/6", "4/6"], correct: 1 },
-  { q: "El valor de 3^3 - 7 es:", options: ["20", "27", "34", "10"], correct: 0 },
+  { "q": "El valor de 3³ - 7 es:", "options": ["20", "27", "34", "10"], "correct": 0 },
   { q: "Calcula (2 + 3) * 4 / 2.", options: ["10", "40", "20", "8"], correct: 0 },
   { q: "Calcula 1,2 * 5 + 3,5.", options: ["6,5", "9,5", "8,5", "9,0"], correct: 1 },
   { q: "Calcula 3/5 + 1/2.", options: ["4/7", "8/10", "11/10", "4/10"], correct: 2 },
@@ -767,11 +767,11 @@
   { q: "El área de un rectángulo es 40 cm2 y su ancho es 5 cm. ¿Cuánto mide el largo?", options: ["20 cm", "8 cm", "10 cm", "4 cm"], correct: 1 },
   { q: "¿Qué se calcula primero en operaciones combinadas?", options: ["Suma y resta", "Paréntesis", "Multiplicación", "División"], correct: 1 },
   { q: "Tengo 4 bolsas con 15 manzanas cada una, y 5 manzanas sueltas. ¿Cuántas manzanas tengo en total?", options: ["60", "24", "80", "65"], correct: 3 },
-  { q: "¿Cuál es el resultado de la potencia 2^4?", options: ["6", "8", "16", "24"], correct: 2 },
+ { "q": "¿Cuál es el resultado de la potencia 2⁴?", "options": ["6", "8", "16", "24"], "correct": 2 },
   { q: "La aproximación por redondeo del 3.500 al millar es:", options: ["3.000", "3.500", "4.000", "5.000"], correct: 2 },
   { q: "¿Qué unidad de superficie es 100 veces mayor que el m2?", options: ["dm2", "km2", "dam2", "hm2"], correct: 2 },
   { q: "La fracción 5/8 es:", options: ["Impropia", "Propia", "Unidad", "Entera"], correct: 1 },
-  { q: "La descomposición 5 * 10^6 + 2 * 10^3 + 1 * 10^0 pertenece al número:", options: ["5.002.001", "5.201.000", "50.002.001", "50.201"], correct: 0 },
+ { "q": "La descomposición 5 × 10⁶ + 2 × 10³ + 1 × 10⁰ pertenece al número:", "options": ["5.002.001", "5.201.000", "50.002.001", "50.201"], "correct": 0 },
   { q: "Si la moda de un conjunto es 7, ¿qué implica?", options: ["La media es 7", "El 7 es el valor más frecuente", "Hay 7 datos", "El 7 es el valor más grande"], correct: 1 },
   { q: "¿Cómo se descompone 10.000 en potencias de base 10?", options: ["10^3", "10^4", "10^5", "10^2"], correct: 1 },
   { q: "La fracción 7/3 es una fracción:", options: ["Propia", "Unidad", "Impropia", "Decimal"], correct: 2 },
