Fix duplicate question entry in index.html

--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
   { "q": "El valor posicional de la descomposición 9 × 10² + 5 × 10¹ es:", "options": ["95", "905", "950", "590"], "correct": 2 },
   { "q": "Aproxima 6.789 al millar.", "options": ["6.000", "7.000", "6.700", "6.800"], "correct": 1 },
   { "q": "¿Cuál es el redondeo de 199 a la decena más cercana?", "options": ["190", "200", "100", "195"], "correct": 1 },
-  { "q": "El número 345.000 se descompone como:", "options": ["3 × 10⁵ + 4 × 10⁴ + 5 × 10³", "345 × 10³", "3 × 10⁴ + 4 × 10³ + 5 × 10²", "Ambas son correctas"], "correct": 0 }
+  { "q": "El número 345.000 se descompone como:", "options": ["3 × 10⁵ + 4 × 10⁴ + 5 × 10³", "345 × 10³", "3 × 10⁴ + 4 × 10³ + 5 × 10²", "Ambas son correctas"], "correct": 0 },
   { "q": "Redondea el número 4.500 a la unidad de millar.", "options": ["4.000", "5.000", "4.600", "4.500"], "correct": 1 },
   { "q": "Aproxima 1.950 a la centena.", "options": ["1.000", "2.000", "1.900", "1.950"], "correct": 1 },
  { "q": "¿Qué número representa la descomposición 8 × 10¹ + 6 × 10⁰?", "options": ["860", "86", "68", "806"], "correct": 1 },
@@ -462,7 +462,7 @@
   { q: "¿Qué propiedad se aplica en: 3 * (10 + 2) = 3 * 10 + 3 * 2?", options: ["Asociativa", "Conmutativa", "Distributiva", "Elemento neutro"], correct: 2 },
   { "q": "Si la base de una potencia es 2 y el exponente es 6, ¿cuál es el resultado (2⁶)?", "options": ["12", "64", "32", "16"], "correct": 1 },
   { q: "El resultado de 1.000 + 10^2 es:", options: ["1.020", "1.100", "1.002", "2.000"], correct: 1 },
- { "q": "¿Cómo se llama el '5' en la expresión 10⁵?", "options": ["Base", "Valor", "Potencia", "Exponente"], "correct": 3 }
+ { "q": "¿Cómo se llama el '5' en la expresión 10⁵?", "options": ["Base", "Valor", "Potencia", "Exponente"], "correct": 3 },
   { q: "¿Cuál de estas fracciones se representa con un punto a la derecha del 1 en la recta numérica?", options: ["2/5", "1/2", "3/3", "7/4"], correct: 3 },
   { q: "Calcula la operación combinada: 15 - (3 + 4).", options: ["12", "8", "9", "11"], correct: 0 },
   { q: "El valor de 10 elevado a 5 (10^5) es:", options: ["10.000", "100.000", "50", "1.000.000"], correct: 1 },
